--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.3
+  intl: ^0.18.0
+  http: ^0.13.5
+  json_annotation: ^4.6.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
