--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,11 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
+def flutterGMapsAPIKey = localProperties.getProperty('flutter.GMapsAPIKey')
+if (flutterGMapsAPIKey == null){
+    throw new GradleException("flutter.GMapsAPIKey Not found. Please enter a key in your local.properties file")
+}
+
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
     flutterVersionCode = '1'
@@ -20,6 +25,12 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
+
+def flutterMinSdkVersion = localProperties.getProperty('flutter.minSdkVersion')
+if (flutterMinSdkVersion == null) {
+    flutterMinSdkVersion = '20'
+}
+
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -47,10 +58,12 @@ android {
         applicationId "com.example.ride_kaki"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 20
+        minSdkVersion flutterMinSdkVersion.toInteger()
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders += [GMapsAPIKey: flutterGMapsAPIKey]
+
     }
 
     buildTypes {
