--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,6 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data android:name="flutterEmbedding" android:value="2" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="flutter.gmaps_api_key" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="${GMapsAPIKey}" />
     </application>
 </manifest>
