--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,24 @@
-name: Deploy Supabase Functions
+#name: Deploy Supabase Functions
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+#on:
+  #push:
+    #branches:
+      #- main
+  #workflow_dispatch:
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+#jobs:
+  #deploy:
+    #runs-on: ubuntu-latest
 
-    env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      PROJECT_ID: tjaovrapeckaepoabxpa
+    #env:
+      #SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      #PROJECT_ID: tjaovrapeckaepoabxpa
 
-    steps:
-      - uses: actions/checkout@v3
+    #steps:
+      #- uses: actions/checkout@v3
 
-      - uses: supabase/setup-cli@v1
-        with:
-          version: 1.0.0
+      #- uses: supabase/setup-cli@v1
+        #with:
+          #version: 1.0.0
 
-      - run: supabase functions deploy github-action-deploy --project-ref $PROJECT_ID
+      #- run: supabase functions deploy hello-world -ref $PROJECT_ID
