--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2 # Only works with v2
+        with: 
+          token: ${{ github.token }}
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
