--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   json_annotation: ^4.6.0
   provider: ^6.0.3
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
