--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.6.0
   provider: ^6.0.3
   geolocator: ^9.0.2
+  coupon_uikit: ^0.2.0
 
 dev_dependencies:
   flutter_test:
