--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   # generate uuid
   uuid: ^3.0.6
   flutter_polyline_points: ^1.0.0
+  flutter_svg: ^2.0.0+1
+  drop_shadow: ^0.0.2+1
+  simple_shadow: ^0.3.1
 
 
 dev_dependencies:
